dissertacao/output.txt
  File "5_2_selecao_modelo.py", line 92
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
